force-app/main/default/objects/Leave_Request__c/fields/End_Date_Session__c.field-meta.xml
<CustomField>
    <fullName>End_Date_Session__c</fullName>
    <inlineHelpText>Session 1 defines Morning, and Session 2 defines Evening</inlineHelpText>
    <label>End Date Session</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Session 1</fullName>
            </value>
            <value>
                <fullName>Session 2</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>