force-app/main/default/objects/Leave_Request__c/fields/End_Time__c.field-meta.xml
<CustomField>
    <fullName>End_Time__c</fullName>
    <inlineHelpText>End Time of Leave</inlineHelpText>
    <label>End Time</label>
    <type>Time</type>
</CustomField>