force-app/main/default/objects/Leave_Request__c/fields/Leave_Days__c.field-meta.xml
<CustomField>
    <fullName>Leave_Days__c</fullName>
    <inlineHelpText>This field shows how many Days the contact has applied for Sick or Earned or Casual Leave</inlineHelpText>
    <label>Leave Days</label>
    <precision>4</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>