force-app/main/default/objects/Leave_Request__c/fields/Leave_Status__c.field-meta.xml
<CustomField>
    <fullName>Leave_Status__c</fullName>
    <label>Leave Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Submitted for Approval</fullName>
                <default>true</default>
                <label>Submitted for Approval</label>
            </value>
            <value>
                <fullName>Approved</fullName>
            </value>
            <value>
                <fullName>Withdraw</fullName>
            </value>
            <value>
                <fullName>Cancelled</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>