force-app/main/default/objects/Leave_Request__c/fields/Leave_Type__c.field-meta.xml
<CustomField>
    <fullName>Leave_Type__c</fullName>
    <inlineHelpText>This denotes which type of leave needs to be selected</inlineHelpText>
    <label>Leave Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Casual Leave</fullName>
            </value>
            <value>
                <fullName>Sick Leave</fullName>
            </value>
            <value>
                <fullName>Earned Leave</fullName>
            </value>
            <value>
                <fullName>Permission Hours</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>