force-app/main/default/objects/Leave_Request__c/fields/Permission_Hours__c.field-meta.xml
<CustomField>
    <fullName>Permission_Hours__c</fullName>
    <inlineHelpText>This field shows how many hours the contact has applied for Permission Hours</inlineHelpText>
    <label>Permission Hours</label>
    <precision>4</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>