force-app/main/default/objects/Leave_Request__c/fields/Start_Time__c.field-meta.xml
<CustomField>
    <fullName>Start_Time__c</fullName>
    <inlineHelpText>Start Time of Leave</inlineHelpText>
    <label>Start Time</label>
    <type>Time</type>
</CustomField>