force-app/main/default/objects/Leave_Request__c/validationRules/LR_CAS_SICK_EARN_LEAVE_TYPE_VALIDATION.validationRule-meta.xml
<ValidationRule>
    <fullName>LR_CAS_SICK_EARN_LEAVE_TYPE_VALIDATION</fullName>
    <active>true</active>
    <description>This validation rule is used to make sure that the fields needed for the Casual, Sick and Earned Leave Type</description>
    <errorConditionFormula>AND(
				OR(ISPICKVAL(Leave_Type__c, &apos;Casual Leave&apos;),
						ISPICKVAL(Leave_Type__c, &apos;Sick Leave&apos;),
						ISPICKVAL(Leave_Type__c, &apos;Earned Leave&apos;))
				,OR(
	 ISBLANK(Start_Date__c),
  ISBLANK(End_Date__c),
  ISPICKVAL(Start_Date_Session__c,&apos;&apos;),
		ISPICKVAL(End_Date_Session__c,&apos;&apos;)  
	))</errorConditionFormula>
    <errorMessage>To apply Casual, Sick, and Earned Leave. Start Date, End Date, Start Date Session, and End Date Session  are mandatory</errorMessage>
</ValidationRule>